--- a/Machine Learning Modelling.ipynb
+++ b/Machine Learning Modelling.ipynb
@@ -686,13 +686,7 @@
       "50/50 [==============================] - 0s 5ms/step - loss: 0.5865 - accuracy: 0.7219 - val_loss: 0.5958 - val_accuracy: 0.6925\n",
       "Epoch 115/150\n",
       "50/50 [==============================] - 0s 3ms/step - loss: 0.5875 - accuracy: 0.7138 - val_loss: 0.5869 - val_accuracy: 0.7075\n",
-      "Epoch 116/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 116/150\n",
       "50/50 [==============================] - 0s 5ms/step - loss: 0.5807 - accuracy: 0.7256 - val_loss: 0.6048 - val_accuracy: 0.7000\n",
       "Epoch 117/150\n",
       "50/50 [==============================] - 0s 3ms/step - loss: 0.5892 - accuracy: 0.7181 - val_loss: 0.5925 - val_accuracy: 0.7075\n",
@@ -929,13 +923,7 @@
       "50/50 [==============================] - 1s 16ms/step - loss: 0.3335 - accuracy: 0.8631 - val_loss: 0.4139 - val_accuracy: 0.8200\n",
       "Epoch 57/200\n",
       "50/50 [==============================] - 1s 18ms/step - loss: 0.3016 - accuracy: 0.8706 - val_loss: 0.5088 - val_accuracy: 0.8200\n",
-      "Epoch 58/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/200\n",
       "50/50 [==============================] - 1s 17ms/step - loss: 0.2964 - accuracy: 0.8819 - val_loss: 0.7367 - val_accuracy: 0.6400\n",
       "Epoch 59/200\n",
       "50/50 [==============================] - 1s 16ms/step - loss: 0.2864 - accuracy: 0.8763 - val_loss: 0.6833 - val_accuracy: 0.7025\n",
